Header font change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dev Creations</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
       --primary-color: #3e3c3c;
@@ -219,7 +219,7 @@
 
 <header>
   <div style="text-align: center;">
-  <h1 style="font-family: 'Great Vibes', cursive; font-size: 4rem; font-weight: 400; margin-bottom: 0.2rem;"><span style="font-size: 4.8rem; font-weight: 400;">Dev</span> .... Creations
+  <h1 style="font-family: 'Playfair Display', serif; font-size: 4rem; font-weight: 400; margin-bottom: 0.2rem;"><span style="font-size: 4.8rem; font-weight: 400;">Dev</span> .... Creations
   </h1>
   
   <p class="fade-in-up" style="font-family: 'Great Vibes', cursive; font-size: 3rem; font-weight: 300; margin-top: 0.2rem;">The Valley of designs</p>
