--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
 
 <header>
   <div style="text-align: center;">
-  <h1 style="font-family: 'Playfair Display', serif; font-size: 4rem; font-weight: 400; margin-bottom: 0.2rem;"><span style="font-size: 4.8rem; font-weight: 400;">Dev</span> .... Creations
+  <h1 style="font-family: 'Playfair Display', serif; font-size: 4rem; font-weight: 400; margin-bottom: 0.2rem;"><span style="font-size: 4.8rem; font-weight: 400;">Dev</span> Creations
   </h1>
   
-  <p class="fade-in-up" style="font-family: 'Great Vibes', cursive; font-size: 3rem; font-weight: 300; margin-top: 0.2rem;">The Valley of designs</p>
+  <p class="fade-in-up" style="font-family: 'Great Vibes', cursive; font-size: 3rem; font-weight: 300; margin-top: 0.2rem;">The Valley of Designs</p>
 </div>
   <p>A glimpse of curated selection of exclusive pattern artistry from the heart of Textile Hub of India</p>
 </header>
